# arctos-pi

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  run_dev.sh  test_gripper.sh
arduino/: flash.sh
arduino/canping/: canping.ino
arduino/gripper/: gripper.ino
arduino/servo_test/: servo_test.ino
backend/: api.py  can_bus.py  config.py  gripper.py  mks.py  motion.py  programs.py  ros_client.py  ros_export.py  teach.py
frontend/: app.js  index.html
ros2_ws/src/arctos_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/arctos_bridge/arctos_bridge/: bridge_node.py
ros2_ws/src/arctos_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/arctos_bringup/config/: controllers.yaml
ros2_ws/src/arctos_bringup/launch/: arctos.launch.py  demo.launch.py  mock_components.launch.py
ros2_ws/src/arctos_description/: CMakeLists.txt  package.xml
ros2_ws/src/arctos_description/config/: arctos_joints.yaml  joint_limits.yaml
ros2_ws/src/arctos_description/launch/: view_robot.launch.py
ros2_ws/src/arctos_description/rviz/: view_robot.rviz
ros2_ws/src/arctos_description/urdf/: arctos.ros2_control.xacro  arctos.urdf.xacro  arctos_macro.xacro
ros2_ws/src/arctos_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/arctos_moveit_config/config/: arctos.srdf  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/arctos_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
ros2_ws/src/arctos_robots/: package.xml  setup.cfg  setup.py
ros2_ws/src/arctos_robots/arctos_robots/: __init__.py  cli.py  registry.py
ros2_ws/src/arctos_robots/robots/arctos/: robot.yaml
systemd/: arctos.service  can0.service
tests/: test_can_bus.py  test_config.py  test_gripper.py  test_home_api.py  test_mks.py  test_motion.py  test_ros_api.py  test_ros_export.py  test_teach.py
