<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_bridge</name>
  <version>0.1.0</version>
  <description>rclpy bridge that reuses the arctos-pi Python Motion/CAN/MKS
    stack and exposes JointState + FollowJointTrajectory + estop/enable so
    MoveIt2 can drive the real Arctos hardware.</description>
  <maintainer email="tencho.tenchev@3dberg.com">3dberg</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>arctos_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
