<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and controller config that tie the Arctos stack
    together: pure-sim (mock_components + joint_trajectory_controller), real
    hardware (arctos_bridge), and the MoveIt demo.</description>
  <maintainer email="tencho.tenchev@3dberg.com">3dberg</maintainer>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>arctos_description</exec_depend>
  <exec_depend>arctos_bridge</exec_depend>
  <exec_depend>arctos_robots</exec_depend>
  <exec_depend>arctos_moveit_config</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
